<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/carrinhoDrawerItem"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/carrinho" />

    <item
        android:id="@+id/pedidos"
        android:icon="@drawable/pedido"
        android:title="@string/pedidos" />

    <item
        android:id="@+id/pagamento"
        android:icon="@drawable/pagamento"
        android:title="@string/formasdepagamento" />
    <item
        android:id="@+id/cadastroDrawerItem"
        android:icon="@drawable/ic_cadastro_preto_24dp"
        android:title="@string/cadastro" />
    <item
        android:id="@+id/ajudaDrawerItem"
        android:icon="@drawable/ic_ajuda_preto_24dp"
        android:title="@string/ajuda"/>
    <item
        android:id="@+id/sair"
        android:icon="@drawable/sair"
        android:title="@string/sair" />
</menu>